<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|end"
    tools:context=".AddRates">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_addRates0"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:fontFamily="@font/adamina"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tv_addRates0"
            android:textColor="#B30732"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_addRates1"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/et_addRates1"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#0C0C0C"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_addRates2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/et_addRates2"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="#1C1C1B"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_addRates3"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/et_addRates3"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="#121211"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_addRates4"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/et_addRates4"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="#191918"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_addRates5"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/et_addRates5"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="#171716"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_addRates6"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/et_addRates6"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="#0B0B0A"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_addRates"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:padding="10dp"
            android:text="@string/btn_addRates"
            android:textSize="20sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>