<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="146dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/amarante"
        android:text="LOGIN"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="304dp"
        android:layout_height="63dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="305dp"
        android:layout_height="57dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_pass"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <TextView
        android:id="@+id/tv_fPassword"
        android:layout_width="131dp"
        android:layout_height="28dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/tv_fPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="186dp"
        android:layout_height="57dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:text="@string/btn_login"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fPassword" />

    <TextView
        android:id="@+id/tv_logo3"
        android:layout_width="179dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="72dp"
        android:text="@string/tv_logo3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_logo4"
        android:layout_width="78dp"
        android:layout_height="26dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="88dp"
        android:text="@string/tv_logo4"
        android:textColor="#C51407"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/tv_logo3"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>
