<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/c70be1fc_2e82_49c5_8b04_d3442a6621ba"
    tools:context=".AddLuxuryvehicles">

    <TextView
        android:id="@+id/tv_luxury2"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="252dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_luxury2"
        android:textColor="#191818"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_luxury0" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="86dp"
        android:layout_height="55dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_luxury1"
        app:layout_constraintTop_toBottomOf="@+id/tv_luxury0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_luxury4"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_luxury4"
        android:textColor="#191818"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_luxury2"
        app:layout_constraintEnd_toStartOf="@+id/checkBox3"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_luxury0"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="87dp"
        android:layout_height="62dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="54dp"
        android:textColor="#CA0E0E"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_luxury1"
        app:layout_constraintTop_toBottomOf="@+id/tv_luxury0" />

    <TextView
        android:id="@+id/tv_luxury0"
        android:layout_width="285dp"
        android:layout_height="51dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="54dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/tv_luxury0"
        android:textColor="#A61717"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_luxury1"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="45dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_luxury1"
        android:textColor="#191818"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_luxury0" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="88dp"
        android:layout_height="58dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="45dp"
        android:shadowColor="@color/black"
        android:textColor="#131313"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_luxury1"
        app:layout_constraintTop_toBottomOf="@+id/tv_luxury0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="74dp"
        android:layout_height="62dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_luxryv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_luxury2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_add_circle_24" />

    <Button
        android:id="@+id/btn_luxryv"
        android:layout_width="128dp"
        android:layout_height="55dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="119dp"
        android:text="@string/btn_luxryv"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />


</androidx.constraintlayout.widget.ConstraintLayout>